calculate_default_measures

--- a/py-pkg/pkgnet/templates/package_report.jinja
+++ b/py-pkg/pkgnet/templates/package_report.jinja
@@ -26,7 +26,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" href="http://uptake.github.io/pkgnet">pkgnet</a> &#8226; Package Report
+        <a class="navbar-brand" href="http://uptake.github.io/pkgnet">pkgnet</a>
     </nav>
     <div class="container-fluid main-container">
         <div class="row" id="header">
