--- a/py-pkg/pkgnet/templates/tab_dependency_report.jinja
+++ b/py-pkg/pkgnet/templates/tab_dependency_report.jinja
@@ -4,7 +4,7 @@
     This section analyzes the recursive package dependencies of <b>{{pkg_name}}</b>.
 </p>
 
-<h4>Vizualization</h4>
+<h4>Visualization</h4>
 
 <p>
     Nodes are packages. Edges point in the direction of dependence.
